Fix text vertical align on buttons The font change broke that

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,10 @@ h3{
 	text-align: center;
 }
 
+.btn {
+	padding-top: 0.8em;
+}
+
 /* Yleiset */
 
 iframe{
@@ -65,7 +69,7 @@ iframe{
 }
 
 .supernova-ostalippuja{
-	padding-top: 40px;
+	padding: 15pt 0 10pt 0;
 }
 
 #yhdistys{
@@ -227,6 +231,7 @@ iframe{
 
 /* Lippukauppa-button */
 .btn-lippukauppa, .btn-lippukauppa:hover {
+	font-family: 'Orbitron', sans-serif;
 /*	color: #330000;
 	background: none;
 	font-size: 20pt;
